<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:nestedScrollingEnabled="true"
    tools:context=".Main.Search.Searchfrag">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/search_searchview"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/searchbar"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_searchint"


                android:searchIcon="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"

                android:fontFamily="@font/rubik_medium"
                android:text="@string/search_tim"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/search_radiogroup_loai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/state_search_radiobg"
                    android:button="@null"
                    android:fontFamily="@font/rubik_medium"


                    android:padding="4dp"
                    android:text="@string/search_dienanh"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/state_search_radiobg"
                    android:button="@null"

                    android:fontFamily="@font/rubik_medium"
                    android:padding="4dp"
                    android:text="@string/search_daitap"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/state_search_radiobg"
                    android:button="@null"

                    android:fontFamily="@font/rubik_medium"
                    android:padding="4dp"
                    android:text="@string/search_aido"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/discover_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>