<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main.Discover.Discover">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="@style/RateSlider"
            android:id="@+id/discover_apdung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lessdark"
            android:nestedScrollingEnabled="false"
            android:text="@string/search_apdung"

            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discover_apdung"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/discover_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/discover_movie"
                            android:layout_width="100dp"

                            android:layout_height="40dp"
                            android:background="@drawable/state_home_typeselect"

                            android:button="@null"
                            android:fontFamily="@font/rubik_medium"

                            android:paddingEnd="4dp"
                            android:text="Movie"
                            android:textAlignment="center"

                            android:theme="@style/DiscoverType" />

                        <RadioButton
                            android:id="@+id/discover_tv"
                            android:layout_width="100dp"

                            android:layout_height="40dp"
                            android:background="@drawable/state_home_typeselect"

                            android:button="@null"
                            android:fontFamily="@font/rubik_medium"
                            android:paddingEnd="4dp"

                            android:text="TVshow"
                            android:textAlignment="center"
                            android:theme="@style/DiscoverType" />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/discover_namsx"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="TTargetSizeCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/discover_minyear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="1990"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/discover_maxyear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="2022"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/discover_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:theme="@style/RateSlider"
                        android:valueFrom="1990"
                        android:valueTo="2022"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/discover_maxyear"
                        app:values="@array/discover_slider_year" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/discover_danhgia"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TTargetSizeCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/discover_minrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/discover_maxrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/discover_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:theme="@style/RateSlider"
                        android:valueFrom="0"
                        android:valueTo="10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/discover_minrate"
                        app:values="@array/discover_slider_rate" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="459dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/discover_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/discover_clearbtn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/discover_theloai"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TTargetSizeCheck" />

                    <Button
                        android:id="@+id/discover_clearbtn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/searchbar"
                        android:text="Clear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>